src/content_scripts/style.css
#metwords-tip {
    position:absolute;
    display:none;
	font-family: Arial, Helvetica, sans-serif;
	font-weight: normal;
	text-align: left;
    background-color:white;
    color:black;
    padding: 10px 10px;
    font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
    width: 600px;
    border: 1px solid black;
    z-index: 7665;
}

#metwords-tip .head {
	margin-bottom: 10px;
	display: flex;
	align-items: flex-end;
}

#metwords-tip .headword {
	line-height: 1.0em;
	font-size: 40px;
	background-color: black;
	color: white;
	margin-right: 10px;
	padding: 1px;
}

#metwords-tip .met-times {
	line-height: 1.2em;
	font-size: 16px;
	background-color: black;
	color: white;
	margin-right: 10px;
}

#metwords-tip .plus-button {
	all: unset;
	font-size: 30px;
	line-height: 1.0em;
	color: black;
	font-weight: bold;
	cursor: pointer;
}

#metwords-tip .plus-button:disabled {
	color: lightgray;
	cursor: default;
}

#metwords-tip .known-switch {
	margin-bottom: 0px;
	margin-left: auto;
}

#metwords-tip .phonetics {
	line-height: 1.2em;
	margin-bottom: 3px;
	display: block;
}

#metwords-tip .phonetic-label {
	font-family: monospace;
	margin-right: 6px;
}

#metwords-tip .phonetic {
	font-family: monospace;
}

#metwords-tip .scenes {
	margin-bottom: 10px;
	display: block;
}

#metwords-tip .scenes a {
	color: black;
	font-weight: 200;
}

#metwords-tip .scenes a:hover {
	text-decoration: none;
}

#metwords-tip xmet {
	font-weight: bold;
}

#metwords-tip ul {
	display: block;
	list-style-position: inside;
	list-style-type: square;
	line-height: 1.4em;
	text-align: left;
	padding: 0;
	margin: 6px 0;
}

#metwords-tip .defs ul {
	list-style-type: none;
	margin-bottom: 10px;
	max-width: max-content;
}

#metwords-tip .defs ul li {
	display: block;
}

#metwords-tip .defs .prefix {
	display: inline-block;
	min-width: 26px;
	color:gray;
	font-weight: 700;
}

#metwords-tip .scenes ul li {
	display: list-item;
	list-style-type:square;
	margin-bottom: 4px;
}

#metwords-tip .met-forget {
	font-size: 14px;
	opacity: 0;
	padding: 1px 10px;
}

#metwords-tip .met-forget:hover {
	opacity: 100;
	cursor: pointer;
}

#metwords-tip .met-message a {
	cursor: pointer;
	color: red;
	text-decoration: solid underline;
	text-underline-position: under;
}

xmetword.x-metword-mark {
    position: relative;
	z-index: 0;
	display: inline;
	text-indent: 0;
}

xmetword.x-metword-mark::before {
    content: attr(data-times);
    color: var(--met-color);
    position: absolute;
    z-index: -7671;
    line-height: 3px;
	height: 2px;
	font-family:'Courier New', Courier, monospace;
	font-weight: 600;
	display: inline-block;
	width: 100%;
	left: 0%;
	top: 100%;
	text-align: left;
	overflow: hidden;
	text-overflow: clip;
}

